tests/snapshots/navigation_wizard_tests__account_add_wizard_launches.snap
---
source: tests/navigation_wizard_tests.rs
expression: output.stdout
---
✔ Automatically loaded last ledger `WizardLedger`.
ledger: WizardLedger ⮞
=== Main menu ===

  Ledger       Ledger operations (new, load, save, backup, restore...)
> Account      Manage accounts via wizard flows
  Category     Manage categories and budgets
  Transaction  Manage transactions via wizard flows
  Simulation   Manage simulations and what-if scenarios
  List         List accounts, categories, transactions, simulations...
  Summary      Show ledger summary
  Forecast     Forecast upcoming activity
  Config       Global CLI preferences
  Help         Show available commands
  Version      Show build metadata
  Exit         Exit the shell

(Use arrow keys to navigate, Enter to select, ESC to exit)
ledger: WizardLedger ⮞
=== account menu ===

> Add     Add an account
  Edit    Edit an account
  Remove  Remove an account
  List    List accounts
  Show    Show account details

(Use arrow keys to navigate, Enter to select, ESC to go back)
ledger: WizardLedger ⮞

=== === Step 1 of 5 – Account name === ===
Type a value and press Enter to continue. Press ESC to cancel the wizard. Type :help for details or :clear to remove the current value.
Account creation cancelled.
ledger: WizardLedger ⮞
=== Main menu ===

> Ledger       Ledger operations (new, load, save, backup, restore...)
  Account      Manage accounts via wizard flows
  Category     Manage categories and budgets
  Transaction  Manage transactions via wizard flows
  Simulation   Manage simulations and what-if scenarios
  List         List accounts, categories, transactions, simulations...
  Summary      Show ledger summary
  Forecast     Forecast upcoming activity
  Config       Global CLI preferences
  Help         Show available commands
  Version      Show build metadata
  Exit         Exit the shell

(Use arrow keys to navigate, Enter to select, ESC to exit)
Exiting shell.
